Updated final scaling function

--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -873,7 +873,7 @@
    "source": [
     "### 5. Based on the work you've done, choose a scaling method for your dataset. Write a function within your `prepare.py` that accepts as input the train, validate, and test data splits, and returns the scaled versions of each. Be sure to only learn the parameters for scaling from your training data!\n",
     "\n",
-    "After looking at the effects of different scaling methods on the telco data, I have decided I will choose the Min-Max scaling method."
+    "After looking at the effects of different scaling methods on the telco data, I have decided I will choose the Min-Max scaling method. In this function, I will scale tenure in addition to monthly_charges and total_charges."
    ]
   },
   {
@@ -885,16 +885,16 @@
    "source": [
     "def scale_telco(train, validate, test):\n",
     "    mm_scaler = sklearn.preprocessing.MinMaxScaler()\n",
-    "    mm_scaler.fit(train[['total_charges', 'monthly_charges']])\n",
-    "    train[['total_charges_scaled', 'monthly_charges_scaled']] = mm_scaler.transform(train[['total_charges', 'monthly_charges']])\n",
-    "    validate[['total_charges_scaled', 'monthly_charges_scaled']] = mm_scaler.transform(validate[['total_charges', 'monthly_charges']])\n",
-    "    test[['total_charges_scaled', 'monthly_charges_scaled']] = mm_scaler.transform(test[['total_charges', 'monthly_charges']])\n",
+    "    mm_scaler.fit(train[['total_charges', 'tenure', 'monthly_charges']])\n",
+    "    train[['total_charges_scaled', 'tenure_scaled', 'monthly_charges_scaled']] = mm_scaler.transform(train[['total_charges', 'tenure', 'monthly_charges']])\n",
+    "    validate[['total_charges_scaled', 'tenure_scaled', 'monthly_charges_scaled']] = mm_scaler.transform(validate[['total_charges', 'tenure', 'monthly_charges']])\n",
+    "    test[['total_charges_scaled', 'tenure_scaled', 'monthly_charges_scaled']] = mm_scaler.transform(test[['total_charges', 'tenure', 'monthly_charges']])\n",
     "    return train, validate, test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "71b7b0c5",
    "metadata": {},
    "outputs": [
@@ -903,7 +903,7 @@
      "output_type": "stream",
      "text": [
       "(3925, 32) (1683, 32) (1402, 32)\n",
-      "(3925, 34) (1683, 34) (1402, 34)\n"
+      "(3925, 35) (1683, 35) (1402, 35)\n"
      ]
     }
    ],
@@ -914,9 +914,17 @@
     "print(train.shape, validate.shape, test.shape)\n",
     "# test function\n",
     "train, validate, test = scale_telco(train, validate, test)\n",
-    "# confirm there are 2 new columns\n",
+    "# confirm there are 3 new columns\n",
     "print(train.shape, validate.shape, test.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a1e961",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
