--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -1703,9 +1703,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "607d4494",
+   "metadata": {},
+   "source": [
+    "Adam said, in our Zillow dataset, that taxamount *would* be considered target leakage in this case since our target is tax_value. Since the model is supposed to predict tax_value, we can't give it the taxamount since those are directly connected (like monthly_charges and total_charges in the Telco data if we were trying to predict total_charges) and it could essentially just calculate the tax_value from the taxamount (and be a cheating model). Therefore, we should not include taxamount in our data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ad8a76f",
+   "id": "317e2b25",
    "metadata": {},
    "outputs": [],
    "source": []
