--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "4f1dac38",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
        "4     2005.0    6941.39  6037.0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "4f7163ec",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "(2152864, 7)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "1080a283",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "fips                              6111.00  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "60c3900a",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "e9201451",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "2c085c70",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
        "1797986          1017957.0     1990.0        NaN  6037.0  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "844a3083",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
        "12629"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "54004928",
    "metadata": {},
    "outputs": [
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "f048ae00",
    "metadata": {},
    "outputs": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "385a7ef8",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "000b568c",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "a2ebf5c9",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1177,7 @@
        "14   0.0    0.0   171.0     6920.0    1973.0     255.17  6037.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "32cdaaa0",
    "metadata": {},
    "outputs": [
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "96bf3df1",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1287,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "id": "2757d6dc",
    "metadata": {},
    "outputs": [
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "id": "a23e6249",
    "metadata": {},
    "outputs": [
@@ -1474,7 +1474,7 @@
        "max             25           32       952576  9.01885e+07   1.0781e+06"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "id": "435cc1af",
    "metadata": {},
    "outputs": [],
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "6b17f912",
    "metadata": {},
    "outputs": [
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "id": "c19e3496",
    "metadata": {},
    "outputs": [
@@ -1555,8 +1555,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2140235, 7)\n",
-      "(1854286, 7)\n"
+      "Shape with outliers: (2140235, 7)\n",
+      "Shape with outliers: (1854286, 7)\n"
      ]
     }
    ],
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "id": "034e461c",
    "metadata": {},
    "outputs": [],
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "id": "03d88797",
    "metadata": {},
    "outputs": [
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "id": "bb0bda84",
    "metadata": {},
    "outputs": [
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "607d4494",
+   "id": "9be4b7fc",
    "metadata": {},
    "source": [
     "Adam said, in our Zillow dataset, that taxamount *would* be considered target leakage in this case since our target is tax_value. Since the model is supposed to predict tax_value, we can't give it the taxamount since those are directly connected (like monthly_charges and total_charges in the Telco data if we were trying to predict total_charges) and it could essentially just calculate the tax_value from the taxamount (and be a cheating model). Therefore, we should not include taxamount in our data."
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "317e2b25",
+   "id": "ed3f2730",
    "metadata": {},
    "outputs": [],
    "source": []
