--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1218f1fd",
+   "id": "54f44054",
    "metadata": {},
    "source": [
     "# Evaluation Exercises\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d9ba9bc1",
+   "id": "b0d3ea92",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fd02484f",
+   "id": "189e8e00",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "42c6b779",
+   "id": "060597a3",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918b3baf",
+   "id": "61c449ea",
    "metadata": {},
    "source": [
     "### 2. Fit a linear regression model (ordinary least squares) and compute yhat, predictions of tip using total_bill."
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fdaa0066",
+   "id": "cd1dcc3c",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19ba7db4",
+   "id": "220c3348",
    "metadata": {},
    "source": [
     "### 3. Plot the residuals for the linear regression model that you made."
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "96ab33b9",
+   "id": "d64c2feb",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "12905928",
+   "id": "6b3f9e80",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62a0dde1",
+   "id": "ca63ab48",
    "metadata": {},
    "source": [
     "### 4. Calculate the sum of squared errors, explained sum of squares, total sum of squares, mean squared error, and root mean squared error for your model."
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "562fdbc1",
+   "id": "50911fff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c46b7e22",
+   "id": "838bebee",
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0109cfe7",
+   "id": "65d67b78",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "60325c1d",
+   "id": "4ea98895",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccedd958",
+   "id": "2faaa1a1",
    "metadata": {},
    "source": [
     "### 5. Calculate the sum of squared errors, mean squared error, and root mean squared error for the baseline model (i.e. a model that always predicts the average tip amount)."
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1dc64c06",
+   "id": "e62ceed8",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4331f648",
+   "id": "604e379c",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0770188",
+   "id": "db1e5f59",
    "metadata": {},
    "source": [
     "### 6. Write python code that compares the sum of squared errors for your model against the sum of squared errors for the baseline model and outputs whether or not your model performs better than the baseline model."
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "30945099",
+   "id": "da9c50d9",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec05873e",
+   "id": "b667a536",
    "metadata": {},
    "source": [
     "### 7. What is the amount of variance explained in your model?"
@@ -946,24 +946,26 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5fa9d944",
+   "id": "f0a54bf4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The amount of variance explained in my model is 212.42373319840416.\n"
+      "The amount of variance explained in my model is 0.45661658635167657.\n"
      ]
     }
    ],
    "source": [
-    "print(f'The amount of variance explained in my model is {ESS}.')"
+    "from sklearn.metrics import r2_score\n",
+    "r2 = r2_score(tips.tip, tips.yhat)\n",
+    "print(f'The amount of variance explained in my model is {r2}.')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d599cc5b",
+   "id": "0328529a",
    "metadata": {},
    "source": [
     "### 8. Is your model better than the baseline model?"
@@ -971,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2654735c",
+   "id": "648afda3",
    "metadata": {},
    "source": [
     "Yes, my model is better than the baseline model."
@@ -979,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f4dda8",
+   "id": "e3b0bc8a",
    "metadata": {},
    "source": [
     "### 9. Create a file named `evaluate.py` that contains the following functions.\n",
@@ -997,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "08a477da",
+   "id": "aed90a44",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fd8b0253",
+   "id": "df73c85f",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3bf1a99a",
+   "id": "9d394778",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "501c13e4",
+   "id": "23aea3db",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fe5acf4",
+   "id": "87802c68",
    "metadata": {},
    "source": [
     "### 10. Load the `mpg` dataset and fit a model that predicts highway mileage based on engine displacement. Take a look at all the regression evaluation metrics, and determine whether this model is better than the baseline model. Use the functions from your `evaluate.py` to help accomplish this."
@@ -1157,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1255ae43",
+   "id": "df4267b2",
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f815f9dd",
+   "id": "4291e387",
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7f09fea8",
+   "id": "de6aae00",
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "03b6e57b",
+   "id": "d04ca0e7",
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "02f2738f",
+   "id": "c7ddc978",
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7800ba02",
+   "id": "c3479d1f",
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6ac4c745",
+   "id": "48103d3b",
    "metadata": {},
    "outputs": [
     {
